hphp/hack/test/typecheck/expression_trees/nested_splicing.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  Code`${${4}}`;
}
